--- a/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
@@ -418,9 +418,19 @@ router bgp 65102
    neighbor MLAG-IPv4-UNDERLAY-PEER maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER route-map RM-MLAG-PEER-IN in
    neighbor PROD-PALO peer group
+   neighbor PROD-PALO remote-as 64512
+   neighbor PROD-PALO local-as 65000 no-prepend replace-as
+   neighbor PROD-PALO description VRF-PROD ASN
    neighbor PROD-PALO ebgp-multihop 3
    neighbor PROD-PALO send-community
    neighbor PROD-PALO maximum-routes 12000
+   neighbor QA-PALO peer group
+   neighbor QA-PALO remote-as 64512
+   neighbor QA-PALO local-as 65001 no-prepend replace-as
+   neighbor QA-PALO description VRF-QA ASN
+   neighbor QA-PALO ebgp-multihop 3
+   neighbor QA-PALO send-community
+   neighbor QA-PALO maximum-routes 12000
    neighbor 10.255.0.1 peer group EVPN-OVERLAY-PEERS
    neighbor 10.255.0.1 remote-as 65100
    neighbor 10.255.0.1 description dc1-spine1
@@ -550,6 +560,7 @@ router bgp 65102
       neighbor IPv4-UNDERLAY-PEERS activate
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
       neighbor PROD-PALO activate
+      neighbor QA-PALO activate
    !
    vrf PROD
       rd 10.255.0.5:10
