--- a/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
@@ -567,16 +567,30 @@ router bgp 65102
       route-target import evpn 10:10
       route-target export evpn 10:10
       router-id 10.255.0.5
+      neighbor 10.254.255.1 remote-as 64512
+      neighbor 10.254.255.1 peer group PROD-PALO
+      neighbor 10.254.255.1 description Palo Alto Firewall
+      neighbor 10.254.255.1 update-source loopback10
       neighbor 10.255.1.101 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.254.255.1 activate
    !
    vrf QA
       rd 10.255.0.5:12
       route-target import evpn 12:12
       route-target export evpn 12:12
       router-id 10.255.0.5
+      neighbor 10.254.255.1 remote-as 64512
+      neighbor 10.254.255.1 peer group QA-PALO
+      neighbor 10.254.255.1 description Palo Alto Firewall
+      neighbor 10.254.255.1 update-source loopback12
       neighbor 10.255.1.101 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.254.255.1 activate
    !
    vrf SHAREDSVCS
       rd 10.255.0.5:14
