--- a/single-dc-l3ls/intended/configs/dc1-leaf1a.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-leaf1a.cfg
@@ -390,6 +390,8 @@ mlag configuration
    reload-delay non-mlag 330
 !
 ip route vrf MGMT 0.0.0.0/0 172.16.1.1
+ip route vrf PROD 10.254.255.1/32 10.254.254.2
+ip route vrf QA 10.254.255.1/32 10.254.253.2
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
