--- a/single-dc-l3ls/intended/configs/dc1-leaf2c.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-leaf2c.cfg
@@ -123,6 +123,8 @@ interface Management1
 no ip routing vrf MGMT
 !
 ip route vrf MGMT 0.0.0.0/0 172.16.1.1
+ip route vrf PROD 10.254.255.1/32 10.254.254.2
+ip route vrf QA 10.254.255.1/32 10.254.253.2
 !
 management api http-commands
    protocol https
