--- a/single-dc-l3ls/intended/configs/dc1-spine1.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-spine1.cfg
@@ -72,6 +72,8 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 10.255.0.0/27 eq 32
 !
 ip route vrf MGMT 0.0.0.0/0 172.16.1.1
+ip route vrf PROD 10.254.255.1/32 10.254.254.2
+ip route vrf QA 10.254.255.1/32 10.254.253.2
 !
 route-map RM-CONN-2-BGP permit 10
    match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
