--- a/single-dc-l3ls/intended/structured_configs/dc1-spine1.yml
+++ b/single-dc-l3ls/intended/structured_configs/dc1-spine1.yml
@@ -82,6 +82,12 @@ static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
   gateway: 172.16.1.1
+- vrf: PROD
+  destination_address_prefix: 10.254.255.1/32
+  gateway: 10.254.254.2
+- vrf: QA
+  destination_address_prefix: 10.254.255.1/32
+  gateway: 10.254.253.2
 service_routing_protocols_model: multi-agent
 ip_routing: true
 daemon_terminattr:
