--- a/single-dc-l3ls/intended/configs/dc1-leaf1b.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-leaf1b.cfg
@@ -562,6 +562,7 @@ router bgp 65101
       router-id 10.255.0.4
       neighbor 10.255.1.96 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf QA
       rd 10.255.0.4:12
@@ -570,6 +571,7 @@ router bgp 65101
       router-id 10.255.0.4
       neighbor 10.255.1.96 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf SHAREDSVCS
       rd 10.255.0.4:14
