--- a/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
@@ -575,6 +575,7 @@ router bgp 65102
       neighbor 10.254.255.1 update-source loopback10
       neighbor 10.255.1.101 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
       !
       address-family ipv4
          neighbor 10.254.255.1 activate
@@ -590,6 +591,7 @@ router bgp 65102
       neighbor 10.254.255.1 update-source loopback12
       neighbor 10.255.1.101 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
       !
       address-family ipv4
          neighbor 10.254.255.1 activate
