--- a/single-dc-l3ls/intended/configs/dc1-leaf2b.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-leaf2b.cfg
@@ -555,6 +555,7 @@ router bgp 65102
       router-id 10.255.0.6
       neighbor 10.255.1.100 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf QA
       rd 10.255.0.6:12
@@ -563,6 +564,7 @@ router bgp 65102
       router-id 10.255.0.6
       neighbor 10.255.1.100 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf SHAREDSVCS
       rd 10.255.0.6:14
