--- a/single-dc-l3ls/intended/structured_configs/dc1-leaf2a.yml
+++ b/single-dc-l3ls/intended/structured_configs/dc1-leaf2a.yml
@@ -109,6 +109,7 @@ router_bgp:
         - '10:10'
     redistribute_routes:
     - source_protocol: connected
+    - source_protocol: static
     neighbors:
     - ip_address: 10.255.1.101
       peer_group: MLAG-IPv4-UNDERLAY-PEER
@@ -135,6 +136,7 @@ router_bgp:
         - '12:12'
     redistribute_routes:
     - source_protocol: connected
+    - source_protocol: static
     neighbors:
     - ip_address: 10.255.1.101
       peer_group: MLAG-IPv4-UNDERLAY-PEER
@@ -337,12 +339,12 @@ static_routes:
 - vrf: MGMT
   destination_address_prefix: 0.0.0.0/0
   gateway: 172.16.1.1
-- vrf: PROD
-  destination_address_prefix: 10.254.255.1/32
+- destination_address_prefix: 10.254.255.1/32
   gateway: 10.254.254.2
-- vrf: QA
-  destination_address_prefix: 10.254.255.1/32
+  vrf: PROD
+- destination_address_prefix: 10.254.255.1/32
   gateway: 10.254.253.2
+  vrf: QA
 service_routing_protocols_model: multi-agent
 ip_routing: true
 daemon_terminattr:
