configured vpcs endpoint ports

--- a/single-dc-l3ls/config_backup/dc1-leaf2a_post_running-config.conf
+++ b/single-dc-l3ls/config_backup/dc1-leaf2a_post_running-config.conf
@@ -134,14 +134,6 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
-interface Port-Channel5
-   description dc1-leaf2-server1_PortChannel dc1-leaf2-server1
-   switchport trunk native vlan 4092
-   switchport trunk allowed vlan 11-12,21-22
-   switchport mode trunk
-   mlag 5
-   spanning-tree portfast
-!
 interface Port-Channel8
    description DC1-LEAF2C_Po1
    switchport trunk allowed vlan 11-16,21-26,1000-1002,3401-3406
@@ -169,8 +161,9 @@ interface Ethernet4
    channel-group 3 mode active
 !
 interface Ethernet5
-   description dc1-leaf2-server1_PCI1
-   channel-group 5 mode active
+   description dc1-leaf2-fw1_Eth5
+   switchport mode trunk
+   spanning-tree portfast
 !
 interface Ethernet6
 !
@@ -183,6 +176,9 @@ interface Ethernet8
 interface Ethernet9
 !
 interface Ethernet10
+   description dc1-leaf2a-vpc13_Eth1
+   switchport access vlan 13
+   spanning-tree portfast
 !
 interface Ethernet11
 !
@@ -364,7 +360,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 20 permit 10.255.1.0/27 eq 32
 !
 mlag configuration
-   domain-id DC1_L3_LEAF2
+   domain-id DC1_L3_BORDER_LEAF2
    local-interface Vlan4094
    peer-address 10.255.1.69
    peer-link Port-Channel3
@@ -372,6 +368,8 @@ mlag configuration
    reload-delay non-mlag 330
 !
 ip route vrf MGMT 0.0.0.0/0 172.16.1.1
+ip route vrf PROD 10.254.255.1/32 10.254.254.2
+ip route vrf QA 10.254.255.1/32 10.254.253.2
 !
 ntp local-interface vrf MGMT Management1
 ntp server vrf MGMT 0.pool.ntp.org prefer
@@ -409,6 +407,20 @@ router bgp 65102
    neighbor MLAG-IPv4-UNDERLAY-PEER password 7 4b21pAdCvWeAqpcKDFMdWw==
    neighbor MLAG-IPv4-UNDERLAY-PEER send-community
    neighbor MLAG-IPv4-UNDERLAY-PEER maximum-routes 12000
+   neighbor PROD-PALO peer group
+   neighbor PROD-PALO remote-as 64512
+   neighbor PROD-PALO local-as 65000 no-prepend replace-as
+   neighbor PROD-PALO description VRF-PROD ASN
+   neighbor PROD-PALO ebgp-multihop 3
+   neighbor PROD-PALO send-community
+   neighbor PROD-PALO maximum-routes 12000
+   neighbor QA-PALO peer group
+   neighbor QA-PALO remote-as 64512
+   neighbor QA-PALO local-as 65001 no-prepend replace-as
+   neighbor QA-PALO description VRF-QA ASN
+   neighbor QA-PALO ebgp-multihop 3
+   neighbor QA-PALO send-community
+   neighbor QA-PALO maximum-routes 12000
    neighbor 10.255.0.1 peer group EVPN-OVERLAY-PEERS
    neighbor 10.255.0.1 remote-as 65100
    neighbor 10.255.0.1 description dc1-spine1
@@ -537,22 +549,40 @@ router bgp 65102
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
+      neighbor PROD-PALO activate
+      neighbor QA-PALO activate
    !
    vrf PROD
       rd 10.255.0.5:10
       route-target import evpn 10:10
       route-target export evpn 10:10
       router-id 10.255.0.5
+      neighbor 10.254.255.1 peer group PROD-PALO
+      neighbor 10.254.255.1 remote-as 64512
+      neighbor 10.254.255.1 update-source Loopback10
+      neighbor 10.254.255.1 description Palo Alto Firewall
       neighbor 10.255.1.101 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
+      !
+      address-family ipv4
+         neighbor 10.254.255.1 activate
    !
    vrf QA
       rd 10.255.0.5:12
       route-target import evpn 12:12
       route-target export evpn 12:12
       router-id 10.255.0.5
+      neighbor 10.254.255.1 peer group QA-PALO
+      neighbor 10.254.255.1 remote-as 64512
+      neighbor 10.254.255.1 update-source Loopback12
+      neighbor 10.254.255.1 description Palo Alto Firewall
       neighbor 10.255.1.101 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
+      !
+      address-family ipv4
+         neighbor 10.254.255.1 activate
    !
    vrf SHAREDSVCS
       rd 10.255.0.5:14
