--- a/single-dc-l3ls/intended/configs/dc1-leaf1a.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-leaf1a.cfg
@@ -125,16 +125,6 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
-interface Port-Channel5
-   description dc1-leaf1-server1_PortChannel dc1-leaf1-server1
-   no shutdown
-   switchport
-   switchport trunk allowed vlan 11-12,21-22,1000-1002
-   switchport trunk native vlan 4092
-   switchport mode trunk
-   mlag 5
-   spanning-tree portfast
-!
 interface Port-Channel8
    description DC1-LEAF1C_Po1
    no shutdown
@@ -170,12 +160,23 @@ interface Ethernet4
 interface Ethernet5
    description dc1-leaf1-server1_PCI1
    no shutdown
-   channel-group 5 mode active
+   switchport trunk native vlan 4092
+   switchport trunk allowed vlan 11-12,21-22,1000-1002
+   switchport mode trunk
+   switchport
 !
 interface Ethernet8
    description DC1-LEAF1C_Ethernet1
    no shutdown
    channel-group 8 mode active
+!
+interface ethernet10
+   description Access Port towards VPC11
+   no shutdown
+   switchport access vlan 11
+   switchport mode access
+   switchport
+   spanning-tree portfast
 !
 interface Loopback0
    description EVPN_Overlay_Peering
