--- a/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
+++ b/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
@@ -160,7 +160,6 @@ interface Ethernet4
 interface Ethernet5
    description dc1-leaf2-fw1_Eth5
    no shutdown
-   switchport trunk native vlan 4092
    switchport mode trunk
    switchport
    spanning-tree portfast
@@ -169,6 +168,14 @@ interface Ethernet8
    description DC1-LEAF2C_Ethernet1
    no shutdown
    channel-group 8 mode active
+!
+interface Ethernet10
+   description dc1-leaf2a-vpc13_Eth1
+   no shutdown
+   switchport access vlan 13
+   switchport mode access
+   switchport
+   spanning-tree portfast
 !
 interface Loopback0
    description EVPN_Overlay_Peering
