--- a/single-dc-l3ls/config_backup/dc1-leaf1b_post_running-config.conf
+++ b/single-dc-l3ls/config_backup/dc1-leaf1b_post_running-config.conf
@@ -134,14 +134,6 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
-interface Port-Channel5
-   description dc1-leaf1-server1_PortChannel dc1-leaf1-server1
-   switchport trunk native vlan 4092
-   switchport trunk allowed vlan 11-12,21-22,1000-1002
-   switchport mode trunk
-   mlag 5
-   spanning-tree portfast
-!
 interface Port-Channel8
    description DC1-LEAF1C_Po1
    switchport trunk allowed vlan 11-16,21-26,1000-1002,3401-3406
@@ -170,7 +162,9 @@ interface Ethernet4
 !
 interface Ethernet5
    description dc1-leaf1-server1_PCI2
-   channel-group 5 mode active
+   switchport trunk native vlan 4092
+   switchport trunk allowed vlan 11-12,21-22,1000-1002
+   switchport mode trunk
 !
 interface Ethernet6
 !
@@ -372,6 +366,8 @@ mlag configuration
    reload-delay non-mlag 330
 !
 ip route vrf MGMT 0.0.0.0/0 172.16.1.1
+ip route vrf PROD 10.254.255.1/32 10.254.254.2
+ip route vrf QA 10.254.255.1/32 10.254.253.2
 !
 ntp local-interface vrf MGMT Management1
 ntp server vrf MGMT 0.pool.ntp.org prefer
@@ -545,6 +541,7 @@ router bgp 65101
       router-id 10.255.0.4
       neighbor 10.255.1.96 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf QA
       rd 10.255.0.4:12
@@ -553,6 +550,7 @@ router bgp 65101
       router-id 10.255.0.4
       neighbor 10.255.1.96 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf SHAREDSVCS
       rd 10.255.0.4:14
