--- a/single-dc-l3ls/config_backup/dc1-leaf2b_post_running-config.conf
+++ b/single-dc-l3ls/config_backup/dc1-leaf2b_post_running-config.conf
@@ -134,14 +134,6 @@ interface Port-Channel3
    switchport trunk group LEAF_PEER_L3
    switchport trunk group MLAG
 !
-interface Port-Channel5
-   description dc1-leaf2-server1_PortChannel dc1-leaf2-server1
-   switchport trunk native vlan 4092
-   switchport trunk allowed vlan 11-12,21-22
-   switchport mode trunk
-   mlag 5
-   spanning-tree portfast
-!
 interface Port-Channel8
    description DC1-LEAF2C_Po1
    switchport trunk allowed vlan 11-16,21-26,1000-1002,3401-3406
@@ -169,8 +161,9 @@ interface Ethernet4
    channel-group 3 mode active
 !
 interface Ethernet5
-   description dc1-leaf2-server1_PCI2
-   channel-group 5 mode active
+   description dc1-leaf2-fw1_Eth6
+   switchport mode trunk
+   spanning-tree portfast
 !
 interface Ethernet6
 !
@@ -364,7 +357,7 @@ ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 20 permit 10.255.1.0/27 eq 32
 !
 mlag configuration
-   domain-id DC1_L3_LEAF2
+   domain-id DC1_L3_BORDER_LEAF2
    local-interface Vlan4094
    peer-address 10.255.1.68
    peer-link Port-Channel3
@@ -372,6 +365,8 @@ mlag configuration
    reload-delay non-mlag 330
 !
 ip route vrf MGMT 0.0.0.0/0 172.16.1.1
+ip route vrf PROD 10.254.255.1/32 10.254.254.2
+ip route vrf QA 10.254.255.1/32 10.254.253.2
 !
 ntp local-interface vrf MGMT Management1
 ntp server vrf MGMT 0.pool.ntp.org prefer
@@ -545,6 +540,7 @@ router bgp 65102
       router-id 10.255.0.6
       neighbor 10.255.1.100 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf QA
       rd 10.255.0.6:12
@@ -553,6 +549,7 @@ router bgp 65102
       router-id 10.255.0.6
       neighbor 10.255.1.100 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+      redistribute static
    !
    vrf SHAREDSVCS
       rd 10.255.0.6:14
