--- a/single-dc-l3ls/config_backup/dc1-leaf2c_post_running-config.conf
+++ b/single-dc-l3ls/config_backup/dc1-leaf2c_post_running-config.conf
@@ -101,7 +101,7 @@ vlan 3406
 vrf instance MGMT
 !
 interface Port-Channel1
-   description DC1_L3_LEAF2_Po8
+   description DC1_L3_BORDER_LEAF2_Po8
    switchport trunk allowed vlan 11-16,21-26,1000-1002,3401-3406
    switchport mode trunk
 !
@@ -118,7 +118,7 @@ interface Ethernet3
 interface Ethernet4
 !
 interface Ethernet5
-   description dc1-leaf2-server1_iLO
+   description dc1-leaf2-fw1_iLO
    switchport access vlan 11
    spanning-tree portfast
 !
