--- a/single-dc-l3ls/ansible.cfg
+++ b/single-dc-l3ls/ansible.cfg
@@ -1,3 +1,5 @@
 [defaults]
 inventory=inventory.yml
 jinja2_extensions = jinja2.ext.loopcontrols,jinja2.ext.do,jinja2.ext.i18n
+deprecation_warnings=false
+
