--- a/ASH/single-dc-l3ls/inventory.yml
+++ b/ASH/single-dc-l3ls/inventory.yml
@@ -5,9 +5,9 @@ all:
       hosts:
         cvp:
           # Ansible variables used by the ansible_avd and ansible_cvp roles to push configuration to devices via CVP
-          ansible_host: 192.168.1.12
-          ansible_user: ansible
-          ansible_password: ansible
+          ansible_host: cv-prod-us-central1-b.arista.io
+          ansible_user: cvaas
+          ansible_password:
           ansible_connection: httpapi
           ansible_httpapi_use_ssl: true
           ansible_httpapi_validate_certs: false
